🍎 初始化热量追踪小程序项目
✨ 功能特性:
- 6种餐次记录 (三餐 + 三次加餐)
- 23+种运动追踪 (5大类运动)
- 热量平衡计算 (摄入-消耗)
- 莫兰迪绿主题设计
- 完整统计分析

🎨 UI优化:
- 清新莫兰迪色系
- 性别符号标记 (♂♀)
- 响应式卡片布局

🚀 准备发布个人版微信小程序

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-# Windows
-[Dd]esktop.ini
-Thumbs.db
-$RECYCLE.BIN/
-
-# macOS
+# 微信小程序
+project.private.config.json
 .DS_Store
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-
-# Node.js
 node_modules/
+
+# 开发工具生成的文件
+*.log
