🔧 更新微信小程序AppID
✅ 配置正式AppID: wxe595b41bdcc2161c
🚀 准备发布到微信小程序平台

--- a/project.config.json
+++ b/project.config.json
@@ -45,7 +45,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wxaab3268a2942171c",
+  "appid": "wxe595b41bdcc2161c",
   "projectname": "热量记录小助手",
   "isGameTourist": false,
   "simulatorType": "wechat",
